--- a/text/abalone_summary.Rmd
+++ b/text/abalone_summary.Rmd
@@ -12,9 +12,16 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Abalone 
 
 ## Age - length relationship/ key
+The Sheppard data is used to develop an age-length key that was then used to determine ages from the lengths collected from Gravina and Meares Pass.  Size frequency distribution comparisons were performed to determine if this was valid.  Visual inspection of these distributions suggests differences. 
+**insert figure here **
+A KS test was performed between Sheppard and Gravina which suggests that they are significantly different distributions.  Age data and subsequent catch curve analysis should be interpreted with caution due to these differences. 
 
 ## catch curve
-The choice of ages to include in the catch curve analysis has been throughly examined by many studies (Dunn et al. 2002, Smith et al. 2012)
+The choice of ages to include in the catch curve analysis has been throughly examined by many studies (Dunn et al. 2002, Smith et al. 2012).  When using the regression method either the peak age to the age with <5 or the age after the peak age to age with <5.  Other methods have slight alterations to the ages used.  
+
+
+
+## simulations to estimate Z
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
