--- a/text/abalone_summary.Rmd
+++ b/text/abalone_summary.Rmd
@@ -26,8 +26,15 @@ A KS test was performed between Sheppard and Gravina which suggests that they ar
 ## catch curve
 ### Background
 The choice of ages to include in the catch curve analysis has been throughly examined by many studies (Dunn et al. 2002, Smith et al. 2012).  When using the regression method either the peak age to the age with <2 or the age after the peak age to age with <2.  Other methods have slight alterations to the ages used.  
-Explain runs/method variations here and label them.
 
+Estimation methods:
+Chapman and Robson
+Regression
+Weighted Regression
+
+When estimating Z using catch curve methods, the age of full recruitment can be subjective.  Most often the peak age of abundance or the peak age of abundance plus 1 is used.  However, violations in the assumption of constant recruitment can alter the peak age to not coincide with the age of full recruitment.  
+
+Additionally, right truncation of the data set (excluding rare older ages) is commonly applied to reduce bias in estimates of Z.  Four common methods are: RG - use all age groups with nonzero catch, R1 - use all groups up to but not including the first age where catch is 0 or 1, R1' - uses all ages with nonzero catches up to and including the age after which all catches are less than 2, R1'' - uses all ages that have catches greater than 1 (Smith et al. 2012). 
 
 ### Sheppard data
 The traditional catch curve methods, using the Sheppard data, yielded a Z estimate of 0.49.  This appears high for the life history of abalone.  
