--- a/text/abalone_summary.Rmd
+++ b/text/abalone_summary.Rmd
@@ -80,6 +80,15 @@ shp_CR <- cbind (peak = Shp_cr[1, ], peak_plus = Shp_cr1[1, ])
 kable(shp_CR, caption = "Chapman Robson method, peak age = 5")
 ```
 
+```{r shp wtg regression, include = TRUE, echo = FALSE}
+shpccW <- catchCurve(n~age, data = shpab.sumlen, ages2use = 5:13, use.weights = TRUE)
+shpccW1 <- catchCurve(n~age, data = shpab.sumlen, ages2use = 6:13, use.weights = TRUE)
+Shp_W <- cbind(Est = coef(shpccW), confint(shpccW))
+Shp_W1 <- cbind(Est = coef(shpccW1), confint(shpccW1))
+
+shp_WR <- cbind (peak = Shp_W[1, ], peak_plus = Shp_W1[1, ])
+kable(shp_WR, caption = "Weighted regression method, peak age = 5")
+```
 
 Questions: 
 Does a peak age of 5 make sense - that this would be the age they would full recruit to the adult population and to the fishery/ sampling methods?  If not what age would be more appropriate.  
@@ -88,6 +97,22 @@ Would you expect ages 4 and 5 to be that much greater than 6 to 13? or was there
 
 
 ### Gravina data 
+The traditional catch curve methods were performed using the Gravina data that has the ages determined from an age-length key of the Sheppard data.  These yielded a Z estimate ranging from 0.51 to 0.49.  This appears high for the life history of abalone. 
+
+Catch curve results:
+
+```{r grv regression, include=TRUE, echo = FALSE}
+shpab.sumlen <- read.csv("../output/shp_catchcurve.csv")
+shpcc <- catchCurve(n~age, data = shpab.sumlen, ages2use = 5:13)
+shpcc1 <- catchCurve(n~age, data = shpab.sumlen, ages2use = 6:13)
+Shp <- cbind(Est = coef(shpcc), confint(shpcc))
+Shp1 <- cbind(Est = coef(shpcc1), confint(shpcc1))
+
+shp_reg <- cbind (peak = Shp[1, ], peak_plus = Shp1[1, ])
+kable(shp_reg, caption = "Regression method, peak age = 5")
+```
+
+
 
 
 
