updates to summary

--- a/text/abalone_summary.Rmd
+++ b/text/abalone_summary.Rmd
@@ -182,7 +182,9 @@ kable(mrs_R, caption = "Regression method, peak age = 2")
 ```
 
 ## Conclusions from catch curve for all areas 
-A Z estiamte of 0.50 seems unnaturally high for these populations considering their life history and lack of commercial fishing pressure.  
+A Z estiamte of 0.50 seems unnaturally high for these populations considering their life history and lack of commercial fishing pressure. Alternative methods for estimating natural mortality from life history information suggest a Z of around 0.25 would be more appropriate.  Additionally, a brief literature search suggested that Z ranging from 0.20 to 0.30 were found in other similar species, and while some variability would be expected in Alaskan species, a Z that is double seems extreme.
+
+
 
 ## simulations to estimate Z
 Preliminary examinations suggest that the values of Z achieved from multiple runs of the length data through the length-age key would not produce vastly different estimate of Z.  Intial runs of 100 suggest similar estimates that all fall within the confidence intervals provided here, at least for the Gravina data.  Mearses Pass length data does not have an adequate sample size to estimate Z well.  
